medmoderna-front/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', "Roboto Light", serif!important;
}


.searchBar {
  z-index: 21;
  position: fixed;
  top: 2.3rem;
  left: 5rem;
  font-size: 2.4rem;
  width: 70vw;
  height: 3rem;
  border: none;
  outline: none;
  border-radius: 3rem;
  transition: all .2s;
  transition-delay: .1s;
}

.searchBar:hover {
  width: 73vw;
  height: 4rem;

}
body{
  overflow-x: hidden;

}

*::after,*::before {
  box-sizing: border-box;
}

@media (max-width: 420px) {
  body {
    overflow-y: hidden;
  }
}

